--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,5 +16,5 @@ jobs:
         working-directory: .
         run: |
           export SHELL=/bin/bash
-          chmod +x gradlew
+          chmod 777 ./gradlew
           ./gradlew build
